--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6894683511:AAE8Xbm_b4CXrOdMkgrwBCxJYWIeYqmNJDw"                              # Require restart after changing it while bot running
+OWNER_ID = "6599198780"                               # Require restart after changing it while bot running
+TELEGRAM_API = "22917000"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "11b81549c2e4c3543806193f590ec0ad"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://privatexbot:privatexbot@cluster0.tlojxso.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -38,8 +38,8 @@ RCLONE_SERVE_PASS = ""
 JD_EMAIL = ""
 JD_PASS = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/HARI-TG/MLTB"
+UPSTREAM_BRANCH = "MLTB"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
