--- a/config.env
+++ b/config.env
@@ -39,7 +39,7 @@ JD_EMAIL = ""
 JD_PASS = ""
 # Update
 UPSTREAM_REPO = "https://github.com/HARI-TG/MLTB"
-UPSTREAM_BRANCH = "MLTB"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
